# PInvokeBenchmark

./: .gitignore  PInvokeBenchmark.sln
Cpp/: CMakeLists.txt
Cpp/src/: add.c  add.h
PInvokeBenchmark/: PInvokeBenchmark.csproj  Program.cs
